--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,7 +8,7 @@
 
 body {
   align-items: center;
-  background: linear-gradient(45deg, #009c3b 0%,#002776 100%);
+  background: linear-gradient(45deg, #0eff1a 0%,#014ce4 100%);
   display: flex;
   justify-content: center;
   flex-direction: column;
