--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,7 +8,7 @@
 
 body {
   align-items: center;
-  background: linear-gradient(45deg, #f85eeb 0%,#3201e4 100%);
+  background: linear-gradient(45deg, #009c3b 0%,#002776 100%);
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -23,8 +23,8 @@ h1 {
 }
 
 .teclado {
-  background: linear-gradient(to bottom, #ffffff 0%,#969696 100%);
-  box-shadow: 6px 8px 0 6px #aaa8a8, 10px 10px 10px #464646;
+  background: linear-gradient(to bottom, #eeeeee 0%,#cccccc 100%);
+  box-shadow: 6px 8px 0 6px #666, 10px 10px 10px #000;
   border-radius: 30px;
   display: grid;
   gap: 10px;
